More tests and testability
